@@ -350,6 +350,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13295: http.server now produces valid HTML 4.01 strict.
+
 - Issue #2892: preserve iterparse events in case of SyntaxError.
 
 - Issue #13287: urllib.request and urllib.error now contains a __all__ and
